Release notes for xmlBlaster (http://www.xmlBlaster.org)
The "#99999" numbers are Subversion revision numbers.

Changes for xxxxx [2005-xx-xx]
==============================
 o #13513 C++ client library
   Added convenience method XmlBlasterAccess.setCallbackDispatcherActive(bool)

 o #13505 Changed C++ ConnectQos to be reference counted
   Added convenience method XmlBlasterAccess.sendAdministrativeCommand()

 o #13502 Bugfix C++ integration of C client library
   Return value of bool update(...) changed to XMLBLASTER_C_bool
   On Windows C++ bool is a 'char' and the C bool is a 'int'
   This mismatch left 3 bytes on the EAX register undefined and lead to wrong bool settings
   when passing a bool from C++ to C.

 o #13491,#13492 JMX Added jmxremote.jar to compile on JDK < 1.5

 o Added administrative access methods, for example
   "numPublish", "numSubscribe" etc.
   Renamed "numUpdates" to "numUpdate"

 o #13477-#13482 Added JMX functionality
   for session, topic and queue handling

 o #13470,#13474 Extended query string syntax
   The constructors of
      GetKey(String,String)
      EraseKey(String,String)
      SubscribeKey(String,String)
      UnSubscribeKey(String,String)
   accept now the query string in URL syntax,
   for example a topic oid like "Hello" or "oid:Hello"
   or a query like "xpath://key", "domain:CLUSTER"
   Topic oid is now checked to not contain apostrophe ' or "

 o #13463 Bugfix user.security.authentication.accessdenied
   - Collecting new ConnectReturnQos after reconnect
   - Setting new instanceId on multiple connect() calls

 o #13462 Bugfix user.security.authentication.accessdenied
   Java client library now does another connect() if
   accessdenied is thrown from server.
   This can happen when a client session is destroyed in the
   server as an administrative task or by other means.
   Note: If the client is not fail safe configured and his callback address
   is buggy, the server always destroys the session and the client