@@ -75,6 +75,20 @@ gcc.enableStackTrace=-U_ENABLE_STACK_TRACE_
 #------------------------------------------------------------------------------
 
 #------------------------------------------------------------------------------
+# Settings of the Xerces-C++ validating XML parser.
+# See http://xml.apache.org/xerces-c/ for more details.
+#
+# - xerces.include.dir is the path to the xercesc-include directry
+#                      (defaults to /usr/include/xercesc)
+# - xerces.lib.dir is on Unix the path to the shared library libxerces-c.so and
+#                  on Windows to ???lib.dll and ???lib.lib (for compilation)
+#                  (defaults to /usr/lib)
+#
+#xerces.include.dir=/usr/include/xercesc
+#xerces.lib.dir=/usr/lib
+#------------------------------------------------------------------------------
+
+#------------------------------------------------------------------------------
 # Persistent queue support in C or C++ client library with http://www.sqlite.org
 # You need to download SQLite yourself, see:
 #  http://www.xmlBlaster.org/xmlBlaster/doc/requirements/client.c.queue.html
@@ -109,131 +123,6 @@ corba.product         = NONE
 #------------------------------------------------------------------------------
 
 #------------------------------------------------------------------------------
-# C++ UNIX example with ACE+TAO 1.3 and xerces 2.6 using g++ 3.2
-#XMLCPP_HOME   = /opt/xerces-c-src_2_6_0-bin
-#XMLCPP_VER    =
-#corba.product = TAO
-#CORBACPP_HOME = /opt/ACE_wrappers/TAO
-#CORBACPP_VER  =
-#------------------------------------------------------------------------------
-
-#------------------------------------------------------------------------------
-# C++ Unix/Linux example with single threaded mico 2.3.7 and xerces 2.6
-#XMLCPP_HOME   = /usr/local/xerces-c
-#XMLCPP_VER    =
-#CORBACPP_HOME = /usr/local/mico
-#corba.product = MICO
-#CORBACPP_VER  = 2.3.7
-#thread.impl   = OMNITHREAD
-#------------------------------------------------------------------------------
-
-#------------------------------------------------------------------------------
-# C++ Unix/Linux example with multi threaded mico 2.3.11 and xerces 2.6
-#XMLCPP_HOME   = /usr/local/xerces-c
-#XMLCPP_VER    =
-#CORBACPP_HOME = /opt/mico
-#corba.product = MICO
-#CORBACPP_VER  = 2.3.11
-#thread.impl   = OMNITHREAD
-#------------------------------------------------------------------------------
-
-#------------------------------------------------------------------------------
-# C++ UNIX example with omniORB 4.0.1 and xerces 2.6 using g++ 3.3
-#XMLCPP_HOME   = /opt/xerces-c-src_2_6_0-bin
-#XMLCPP_VER    =
-#corba.product = OMNIORB
-#CORBACPP_HOME = /opt/omniORB
-#CORBACPP_VER  =
-#------------------------------------------------------------------------------
-
-#------------------------------------------------------------------------------
-# C++ SunOS 5.8 example with Orbix 2000 2.0 and xerces 1.6 with OMNITHREAD
-# compiled with Sun WorkShop 6 update 2 C++ 5.3 compiler
-#use-CC        = 1
-#XMLCPP_HOME   = /usr/local
-#XMLCPP_VER    = 1_6_0
-#CORBACPP_HOME = /opt/iona
-#corba.product = ORBIX
-#CORBACPP_VER  = orbix_art/2.0
-#thread.impl   = OMNITHREAD
-#------------------------------------------------------------------------------
-
-#------------------------------------------------------------------------------
-# C++ SunOS 5.8 sparc example with Orbix ASP 5.1 and xerces 1.6 with OMNITHREAD
-# compiled with CC: Forte Developer 7 C++ 5.4 2002/03/09
-#use-CC        = 1
-#XMLCPP_HOME   = /opt/xerces-c1_6_0-SolForCC
-#XMLCPP_VER    = 1_6_0
-#CORBACPP_HOME = /opt/iona
-#corba.product = ORBIX
-#CORBACPP_VER  = asp/5.1
-#thread.impl   = OMNITHREAD
-#CXX           =
-#------------------------------------------------------------------------------
-
-#------------------------------------------------------------------------------
-# C++ Linux example with Orbix E2A ver. 5.1 and xerces 2.6.0 with OMNITHREAD
-# compiled with gcc version 2.95.3 compiler
-#use-CC        = 1
-#XMLCPP_HOME   = /usr/local/xerces-c
-#XMLCPP_VER    = 1_6_0
-#CORBACPP_HOME = /opt/iona
-#corba.product = ORBIX
-#CORBACPP_VER  = asp/5.1
-#thread.impl   = OMNITHREAD
-#CXX           =
-#------------------------------------------------------------------------------
-
-#------------------------------------------------------------------------------
-# C++ Linux example with ORBACUS 4.1.0 and xerces 2.6.0 with OMNITHREAD
-#XMLCPP_HOME   = /usr/local/xerces-c
-#XMLCPP_VER    =
-#CORBACPP_HOME = /usr/local/orbacus
-#corba.product = ORBACUS
-#CORBACPP_VER
-#thread.impl   = OMNITHREAD
-#CXX           =
-#------------------------------------------------------------------------------
-
-#------------------------------------------------------------------------------
-# C++ Windows example with ORBIX 2000 2.0 and xerces 2.6 using VC++ 7 with OMNITHREAD
-# Note: This did NOT compile as ORBIX headers produced errors
-#use-msvc      = 1
-#XMLCPP_HOME   = C:/Dev/xerces-c2_6_0-win32
-#XMLCPP_VER    = _2
-#corba.product = ORBIX
-#CORBACPP_HOME = C:/Dev/IONA
-#CORBACPP_VER  = 5.1
-# Copy
-#  xerces\Build\Win32\VC7\debug (or release) xercex-c_2.lib xerces-c_2D.lib
-# to
-#  %XMLCPP_HOME%\lib
-#------------------------------------------------------------------------------
-
-#------------------------------------------------------------------------------
-# C++ Windows example with ACE+TAO 1.3 and xerces 2.6 using VC++ 7
-#use-msvc      = 1
-#XMLCPP_HOME   = C:/Dev/xerces-c2_6_0-win32
-#XMLCPP_VER    = _2
-#corba.product = TAO
-#CORBACPP_HOME = C:/Dev/ACE_wrappers/TAO
-#idl.cmd       = C:/Dev/ACE_wrappers/bin/tao_idl.exe
-#CORBACPP_VER  = 1.3
-#------------------------------------------------------------------------------
-
-#------------------------------------------------------------------------------
-# C++ Windows example with mico 2.3.8 and xerces 2.6 using VC++ 7 with BOOST
-#use-msvc      = 1
-#XMLCPP_HOME   = C:/Dev/xerces-c2_6_0-win32
-#XMLCPP_VER    = _2
-#CORBACPP_HOME = C:/Dev/mico
-#corba.product = MICO
-#idl.cmd       = ${CORBACPP_HOME}/win32-bin/idl
-#CORBACPP_VER  = 238
-#thread.impl   = BOOST
-#------------------------------------------------------------------------------
-
-#------------------------------------------------------------------------------
 # Usage help:
 #
 # corba.product = MICO
@@ -241,11 +130,6 @@ corba.product         = NONE
 #  Note: The code supports one of OMNIORB, ORBACUS, MICO, TAO, ORBIX
 #   Extend src/c++/client/protocol/corba/CompatibleCorba.h for another ORB
 #   Extend build.xml to compile another ORB
-#
-# XMLCPP_VER    = _2D     (Windows)
-# XMLCPP_VER    =         (UNIX: empty for xerces >= 2, e.g. for 2.6)
-#   Windows e.g.  xerces-c_2.lib or xerces-c_2D.lib
-#   Linux and Xerces >= 2.0 e.g.    libxerces-c.so.22.0
 #
 # thread.impl   = OMNITHREAD | BOOST
 #   The default is to link with the omniORB multi threading library.
