@@ -83,8 +83,7 @@
         on this is a problem you can comment out some code snippets to be backward compatible to 1.x)</b>.
         <br/>
         Now, when building with ant, the xerces-c library will be used. In build.properties make sure that
-        the $XMLCPP_VER is set correctly (see examples there) and that the link to the directory for xerces is correct.
-        The XMLCPP_VER setting is used only to create the correct library name as generated by the xerces build process.
+        the $xerces.include.dir and $xerces.lib.dir are set correctly (see examples there) and that the link to the directory for xerces is correct.
      </p>
      
      <h2>The CORBA library</h2>
@@ -217,18 +216,14 @@ Supported tasks are
    </p>
 <pre>
 #------------------------------------------------------------------------------
-# C++ UNIX example with ACE+TAO 1.3 and xerces 2.2 using g++ 3.2
-#XMLCPP_HOME   = /opt/xerces-c-src2_2_0-bin
-#XMLCPP_VER    = 
+# C++ UNIX example with ACE+TAO 1.3 using g++ 3.2
 #corba.product = TAO
 #CORBACPP_HOME = /opt/ACE_wrappers/TAO
 #CORBACPP_VER  = 
 #------------------------------------------------------------------------------
 
 #------------------------------------------------------------------------------
-# C++ Unix/Linux example with mico 2.3.7 and xerces 2.2 and forcing omnithreads
-XMLCPP_HOME   = /usr/local/xerces-c
-XMLCPP_VER    = 
+# C++ Unix/Linux example with mico 2.3.7 and forcing omnithreads
 CORBACPP_HOME = /usr/local/mico
 corba.product = MICO
 CORBACPP_VER  = 2.3.7
@@ -236,10 +231,8 @@ thread.impl   = OMNITHREAD
 #------------------------------------------------------------------------------
 
 #------------------------------------------------------------------------------
-# C++ Windows example with ACE+TAO 1.3 and xerces 2.2 using VC++ 7 and boost
+# C++ Windows example with ACE+TAO 1.3 using VC++ 7 and boost
 #use-msvc      = 1
-#XMLCPP_HOME   = C:/Dev/xerces-c2_2_0-win32
-#XMLCPP_VER    = _2
 #corba.product = TAO
 #CORBACPP_HOME = C:/Dev/ACE_wrappers/TAO
 #idl.cmd       = C:/Dev/ACE_wrappers/bin/tao_idl.exe
@@ -248,10 +241,8 @@ thread.impl   = OMNITHREAD
 #------------------------------------------------------------------------------
 
 #------------------------------------------------------------------------------
-# C++ Windows example with mico 2.3.8 and xerces 2.2 using VC++ 7
+# C++ Windows example with mico 2.3.8 using VC++ 7
 #use-msvc      = 1
-#XMLCPP_HOME   = C:/Dev/xerces-c2_2_0-win32
-#XMLCPP_VER    = _2
 #CORBACPP_HOME = C:/Dev/mico
 #corba.product = MICO
 #idl.cmd       = ${CORBACPP_HOME}/win32-bin/idl
@@ -266,13 +257,6 @@ thread.impl   = OMNITHREAD
 #  Note: The code supports one of OMNIORB, ORBACUS, MICO, TAO, ORBIX
 #   but the build.xml compile script currently only supports MICO or TAO
 #   Extend src/c++/client/protocol/corba/CompatibleCorba.h for another ORB
-#
-# XMLCPP_VER    = 1_ or _2D     (Windows)
-# XMLCPP_VER    = 1_7_0         (UNIX: and xerces smaller version 2)
-# XMLCPP_VER    =               (UNIX: empty for xerces >= 2, e.g. for 2.2)
-#   Windows e.g.  xerces-c_2.lib or xerces-c_2D.lib
-#   Linux and Xerces below 2.0 e.g. libxerces-c1_7_0.so
-#   Linux and Xerces >= 2.0 e.g.    libxerces-c.so.22.0
 #
 # thread.impl   = OMNITHREAD | BOOST
 #   The default is to link with the omniORB multi threading library.
